--- a/0731/webapp/css/chat.css
+++ b/0731/webapp/css/chat.css
@@ -1,5 +1,17 @@
 @charset "UTF-8";
 
+
+#content {
+	margin-top:0;
+	position:relative;
+	z-index: 999;
+	width: 600px;
+	margin: auto;
+}
+.aux {
+	width: 600px;
+}
+
 #chattingSection {
 	width: 600px;
 	height: 800px;
